--- a/index.html
+++ b/index.html
@@ -13,7 +13,28 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1><i class="fa-solid fa-stopwatch"></i>StopWatch</h1>
+        <div class="stop-watch">
+            <span id="min">00</span>
+            <span id="colon">:</span>
+            <span id="sec">00</span>
+            <span id="colon">:</span>
+            <span id="centisec">00</span>
+        </div>
+        <div class="buttons">
+            <button class="reset-btn"><i class="fa-solid fa-power-off"></i></button>
+            <button class="start-pause-btn"><i class="fa-solid fa-play"></i></button>
+            <button class="reset-btn"><i class="fa-solid fa-arrow-rotate-right"></i></button>
+        </div>
+
+        <div class="count-box">
+            <div class="count">
+                <p><span id="count-id">Count</span><br><span id="duration">00:00:00</span></p>
+                <p id="stop-time">00:00.00</p>
+            </div>
+        </div>
+    </div>
 
     <!-- js file -->
     <script src="app.js"></script>
